--- a/closed/openj9_version_info.h.in
+++ b/closed/openj9_version_info.h.in
@@ -1,6 +1,6 @@
 /*
  * ===========================================================================
- * (c) Copyright IBM Corp. 2017, 2024 All Rights Reserved
+ * (c) Copyright IBM Corp. 2017, 2025 All Rights Reserved
  * ===========================================================================
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
@@ -23,7 +23,7 @@
 #ifndef OPENJ9_VERSION_INFO_H
 #define OPENJ9_VERSION_INFO_H
 
-#define J9COMPILER_VERSION_STRING "@COMPILER_VERSION_STRING@"
+#define J9COMPILER_VERSION_STRING "@CXX_VERSION_STRING@"
 #define J9PRODUCT_NAME            "@PRODUCT_NAME@ @PRODUCT_SUFFIX@"
 #define J9TARGET_CPU_BITS         "@OPENJDK_TARGET_CPU_BITS@"
 #define J9TARGET_CPU_OSARCH       "@OPENJDK_TARGET_CPU_OSARCH@"
